crates/tests/rust_snapshots/tests/snapshots/pdf_inspect__inspect_ocr_graph_ocred.snap
---
source: crates/tests/rust_snapshots/tests/pdf_inspect.rs
expression: "inspect_json(fixtures::OCR_GRAPH_OCRED_PDF)"
---
{
  "classification": "TextBased",
  "confidence": 1.0,
  "has_encoding_issues": false,
  "page_count": 1,
  "pages_needing_ocr": []
}
