crates/tests/rust_snapshots/tests/snapshots/pdf_inspect__inspect_ocr_tagged_textbased.snap
---
source: crates/tests/rust_snapshots/tests/pdf_inspect.rs
expression: "inspect_json(fixtures::OCR_TAGGED_TEXTBASED_PDF)"
---
{
  "classification": "TextBased",
  "confidence": 0.5,
  "has_encoding_issues": false,
  "page_count": 2,
  "pages_needing_ocr": []
}
