crates/tests/rust_snapshots/tests/snapshots/pdf_inspect__inspect_openxml_whitepaper.snap
---
source: crates/tests/rust_snapshots/tests/pdf_inspect.rs
expression: "inspect_json(fixtures::OPENXML_WHITEPAPER_PDF)"
---
{
  "classification": "TextBased",
  "confidence": 1.0,
  "has_encoding_issues": false,
  "page_count": 14,
  "pages_needing_ocr": []
}
